--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "jquery": "^3.7.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.4",
