--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.13.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.1.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
